tests/ui/pattern/usefulness/match-arm-statics.stderr
error: unreachable pattern
  --> $DIR/match-arm-statics.rs:25:9
   |
LL |         TRUE_TRUE => (),
   |         --------- matches all the values already
...
LL |         (true, true) => ()
   |         ^^^^^^^^^^^^ unreachable pattern
   |
note: the lint level is defined here
  --> $DIR/match-arm-statics.rs:2:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/match-arm-statics.rs:40:9
   |
LL |         Some(Some(EAST)) => (),
   |         ---------------- matches all the values already
...
LL |         Some(Some(East)) => (),
   |         ^^^^^^^^^^^^^^^^ unreachable pattern

error: unreachable pattern
  --> $DIR/match-arm-statics.rs:60:9
   |
LL |         Foo { bar: Some(EAST), baz: NewBool(false) } => ()
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unreachable pattern
   |
note: these patterns collectively make the last one unreachable
  --> $DIR/match-arm-statics.rs:60:9
   |
LL |         Foo { bar: _, baz: NEW_FALSE } => (),
   |         ------------------------------ matches some of the same values
...
LL |         Foo { bar: Some(EAST), .. } => (),
   |         --------------------------- matches some of the same values
LL |         Foo { bar: Some(North), baz: NewBool(true) } => (),
LL |         Foo { bar: Some(EAST), baz: NewBool(false) } => ()
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ collectively making this unreachable

error: aborting due to 3 previous errors

